RESOLVED FIXED123254
[WINCE]spin button of input tag of number is not panited
https://bugs.webkit.org/show_bug.cgi?id=123254
Summary [WINCE]spin button of input tag of number is not panited
Zhuang Zhigang
Reported 2013-10-24 00:40:44 PDT
The method of adjustInnerSpinButtonStyle and paintInnerSpinButton is not implemented for WinCE port.
Attachments
paint spin button of number input for wince (3.14 KB, patch)
2013-10-24 03:26 PDT, Zhuang Zhigang
no flags
a new patch that passed Tools/Scripts/check-webkit-style (3.11 KB, patch)
2013-10-31 03:15 PDT, Zhuang Zhigang
no flags
updated patch:rename "i" to "paintInfo" (3.12 KB, patch)
2013-11-01 03:01 PDT, Zhuang Zhigang
no flags
updated patch: rephrase the ChangeLog (3.08 KB, patch)
2013-11-03 19:36 PST, Zhuang Zhigang
no flags
Zhuang Zhigang
Comment 1 2013-10-24 03:26:32 PDT
Created attachment 215046 [details] paint spin button of number input for wince
Patrick R. Gansterer
Comment 2 2013-10-31 01:42:21 PDT
Comment on attachment 215046 [details] paint spin button of number input for wince Please set the r? flag to get the patch reviewed and into the tree.
WebKit Commit Bot
Comment 3 2013-10-31 01:44:58 PDT
Attachment 215046 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/RenderThemeWinCE.cpp', u'Source/WebCore/rendering/RenderThemeWinCE.h']" exit_code: 1 Source/WebCore/rendering/RenderThemeWinCE.h:117: The parameter name "style" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/rendering/RenderThemeWinCE.h:117: Extra space before last semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Source/WebCore/rendering/RenderThemeWinCE.h:118: The parameter name "i" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/rendering/RenderThemeWinCE.h:118: The parameter name "r" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/rendering/RenderThemeWinCE.cpp:676: This { should be at the end of the previous line [whitespace/braces] [4] Source/WebCore/rendering/RenderThemeWinCE.cpp:680: An else should appear on the same line as the preceding } [whitespace/newline] [4] Source/WebCore/rendering/RenderThemeWinCE.cpp:680: Missing space before ( in if( [whitespace/parens] [5] Source/WebCore/rendering/RenderThemeWinCE.cpp:681: This { should be at the end of the previous line [whitespace/braces] [4] Source/WebCore/rendering/RenderThemeWinCE.cpp:682: Missing space before ( in if( [whitespace/parens] [5] Total errors found: 9 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zhuang Zhigang
Comment 4 2013-10-31 03:15:12 PDT
Created attachment 215641 [details] a new patch that passed Tools/Scripts/check-webkit-style
Brent Fulgham
Comment 5 2013-10-31 09:41:16 PDT
Patrick, does this patch seem okay to you?
Patrick R. Gansterer
Comment 6 2013-11-01 01:35:17 PDT
(In reply to comment #5) > Patrick, does this patch seem okay to you? Yes, looks ok to me.
Patrick R. Gansterer
Comment 7 2013-11-01 01:36:51 PDT
Comment on attachment 215641 [details] a new patch that passed Tools/Scripts/check-webkit-style View in context: https://bugs.webkit.org/attachment.cgi?id=215641&action=review > Source/WebCore/rendering/RenderThemeWinCE.cpp:660 > +bool RenderThemeWinCE::paintInnerSpinButton(RenderObject* o, const PaintInfo& i, const IntRect& r) please rename "i" to "paintInfo", like in the other functions.
Zhuang Zhigang
Comment 8 2013-11-01 03:01:41 PDT
Created attachment 215728 [details] updated patch:rename "i" to "paintInfo"
Zhuang Zhigang
Comment 9 2013-11-01 03:04:40 PDT
(In reply to comment #7) > (From update of attachment 215641 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=215641&action=review > > > Source/WebCore/rendering/RenderThemeWinCE.cpp:660 > > +bool RenderThemeWinCE::paintInnerSpinButton(RenderObject* o, const PaintInfo& i, const IntRect& r) > > please rename "i" to "paintInfo", like in the other functions. OK, "i" was renamed to "paintInfo". Please check the new patch!
Patrick R. Gansterer
Comment 10 2013-11-01 03:34:39 PDT
Comment on attachment 215728 [details] updated patch:rename "i" to "paintInfo" looks ok to me
Brent Fulgham
Comment 11 2013-11-01 08:45:36 PDT
Comment on attachment 215728 [details] updated patch:rename "i" to "paintInfo" View in context: https://bugs.webkit.org/attachment.cgi?id=215728&action=review Let's rephrase the ChangeLog slightly. Otherwise, it's ready to land. > Source/WebCore/ChangeLog:3 > + Paint spin button of input of number type on WinCE port. Let's rephrase this as "Implement spin control on WinCE port"
Zhuang Zhigang
Comment 12 2013-11-03 19:36:51 PST
Created attachment 215885 [details] updated patch: rephrase the ChangeLog
Zhuang Zhigang
Comment 13 2013-11-03 19:45:39 PST
(In reply to comment #11) > (From update of attachment 215728 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=215728&action=review > > Let's rephrase the ChangeLog slightly. Otherwise, it's ready to land. > > > Source/WebCore/ChangeLog:3 > > + Paint spin button of input of number type on WinCE port. > > Let's rephrase this as "Implement spin control on WinCE port" OK! It was done. Please check it in new patch.
Brent Fulgham
Comment 14 2013-11-19 17:46:52 PST
Comment on attachment 215885 [details] updated patch: rephrase the ChangeLog Thanks for addressing those earlier comments. r=me!
WebKit Commit Bot
Comment 15 2013-11-19 18:10:21 PST
Comment on attachment 215885 [details] updated patch: rephrase the ChangeLog Clearing flags on attachment: 215885 Committed r159534: <http://trac.webkit.org/changeset/159534>
WebKit Commit Bot
Comment 16 2013-11-19 18:10:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.