Implement spin control on WinCE port. https://bugs.webkit.org/show_bug.cgi?id=123254

Patch by Zhuang Zhigang <zhuangzg@cn.fujitsu.com> on 2013-11-19
Reviewed by Brent Fulgham.

* rendering/RenderThemeWinCE.cpp:
(WebCore::RenderThemeWinCE::adjustInnerSpinButtonStyle):
(WebCore::RenderThemeWinCE::paintInnerSpinButton):
* rendering/RenderThemeWinCE.h:

Canonical link: https://commits.webkit.org/142793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159534 268f45cc-cd09-0410-ab3c-d52691b4dbfc